@@ -4,7 +4,6 @@ import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerRemoveImage
 import org.gradle.api.tasks.Copy
-
 buildscript {
     ext {
         artifactoryContextUrl="https://artifactory.ossim.io/artifactory"
@@ -13,6 +12,7 @@ buildscript {
     repositories {
 
      mavenLocal()
+
      maven { url "${ossimMavenProxy}" }
       jcenter()
       maven {
@@ -20,15 +20,20 @@ buildscript {
       }
     }
     dependencies {
-        classpath 'com.bmuschko:gradle-docker-plugin:3.0.12'
-        classpath 'com.github.skhatri:gradle-s3-plugin:1.0.4'
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
+      classpath 'com.bmuschko:gradle-docker-plugin:3.0.12'
+      classpath 'com.github.skhatri:gradle-s3-plugin:1.0.4'
+      classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
+      classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
    }
 }
 
 apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
 apply plugin: com.github.skhatri.s3aws.plugin.S3Plugin
 apply plugin: org.jfrog.gradle.plugin.artifactory.ArtifactoryPlugin
+
+repositories {
+ // maven { url "${ossimMavenProxy}" }
+}
 
 def lazyProperty(final String propertyName) {
     // Get property.
@@ -67,6 +72,7 @@ def lazyProperty(final String propertyName) {
 def getCurrentGitBranch() {
     def gitBranch = "Unknown branch"
     try {
+      println "${project.projectDir}"
         def workingDir = new File("${project.projectDir}")
         def result = 'git rev-parse --abbrev-ref HEAD'.execute(null, workingDir)
         result.waitFor()
@@ -227,7 +233,7 @@ task createDockerfile(type: Dockerfile){
     //instruction "USER 1001"
     instruction 'WORKDIR /home/omar'
 
-    instruction "CMD java -server -Xms256m -Xmx1024m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -Djava.security.egd=file:/dev/./urandom -jar ${jarName}"
+    instruction "CMD java -server -Dlogging.config=classpath:logback.groovy -Xms256m -Xmx1024m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -XX:+UnlockExperimentalVMOptions  -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Djava.security.egd=file:/dev/./urandom -jar ${jarName}"
   }
 }
 
@@ -245,11 +251,18 @@ task tagDockerImage(type: DockerTagImage, dependsOn: buildDockerImage){
 }
 
 
-task pushDockerImage(type: DockerPushImage){
-
+task pushDockerImage(/*type: DockerPushImage*/){
+  dependsOn tagDockerImage
+  doLast {
+    exec {
+      commandLine 'docker', 'push', "${dockerNamespaceUrl}${image}"
+    }
+  }
+/*
   dependsOn tagDockerImage
 
   imageName "${dockerNamespaceUrl}${image}"
+*/
 }
 
 task saveDockerImage(dependsOn: pushDockerImage) {
@@ -332,7 +345,6 @@ if( hasJar )
   doAll.dependsOn.add("jarFileToS3")
   if(lazyProperty('dockerFile'))
   {
-     createDockerfile.dependsOn.add("copyJarToDockerDir")    
-
+     createDockerfile.dependsOn.add("copyJarToDockerDir")
   }
 }
